fix for masonry overlaps

--- a/app/assets/stylesheets/controllers/_masonryFilterGrid.scss
+++ b/app/assets/stylesheets/controllers/_masonryFilterGrid.scss
@@ -25,18 +25,30 @@ section.masonryFilterGrid {
   .masonry-wrapper {
     @include respond-to(">=large") {
       margin-left: -25px;
-      margin-right: -25px;
+      margin-right: -60px;
     }
   }
+
+
   .cards-container {
+    @include cf();
     min-height: 150px;
     margin: 0 auto;
-
     .cardBox {
       width: 310px;
       margin-bottom: 24px;
+      float: left;
+      margin-right: 24px;
+    }
+    .cardBox:nth-child(3n) { margin-right: 0; }
+    .cardBox:nth-child(3n+4) { clear: both; }
+
+    .coverImg {
+      min-width: 292px;
+      min-height: 176px;
     }
   }
+
 
   .msgNoStreamContent {
     @include font-size-primaryFont();
